@@ -169,3 +169,9 @@ CREATE INDEX cache_messages_changed_idx ON cache_messages (changed);
 -- Updates from version 0.7-beta
 
 ALTER TABLE "session" ALTER sess_id TYPE varchar(128);
+
+-- Updates from version 0.7
+
+DROP INDEX contacts_user_id_idx;
+CREATE INDEX contacts_user_id_idx ON contacts USING btree (user_id, del);
+ALTER TABLE contacts ALTER email TYPE text;
